add smooth opening to projects sections

--- a/todo/styles/base/_root.scss
+++ b/todo/styles/base/_root.scss
@@ -6,6 +6,7 @@
   --color-red: #ff7979;
   --color-green: #78d700;
   --color-gray-alt: #888da7;
+  --color-gray-ligth: rgb(136, 141, 167, 0.1);
 
   --main-font: "ExoTooSemiMed", sans-serif;
   --title-font: "ExoTooBold", sans-serif;
