--- a/todo/styles/main.css
+++ b/todo/styles/main.css
@@ -259,6 +259,7 @@ p {
   --color-red: #ff7979;
   --color-green: #78d700;
   --color-gray-alt: #888da7;
+  --color-gray-ligth: rgb(136, 141, 167, 0.1);
   --main-font: "ExoTooSemiMed", sans-serif;
   --title-font: "ExoTooBold", sans-serif;
   --any-font: "ExoTooSemiBold", sans-serif;
@@ -290,7 +291,7 @@ p {
   gap: 5px;
   flex-direction: column;
 }
-.sider__item {
+.sider__link {
   border: 1px solid aqua;
   width: 48px;
   height: 48px;
@@ -298,4 +299,184 @@ p {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
+}
+.projects {
+  width: 325px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.projects__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 40px;
+}
+.projects__top h1 {
+  font-size: 30px;
+  color: var(--color-dark);
+}
+.projects__top-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  background: rgba(28, 29, 34, 0.08);
+  color: var(--color-gray);
+  font-size: 20px;
+}
+.projects__main {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+.projects__main-chapter {
+  margin-bottom: 16px;
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  position: relative;
+  align-items: center;
+}
+.projects__main-chapter::after {
+  content: "";
+  position: absolute;
+  width: 7px;
+  background-color: var(--color-gray);
+  height: 1px;
+  right: 0;
+  rotate: -45deg;
+}
+.projects__main-chapter::before {
+  content: "";
+  position: absolute;
+  width: 7px;
+  background-color: var(--color-gray);
+  height: 1px;
+  right: 0px;
+  top: 8px;
+  rotate: 225deg;
+}
+.projects__main-title {
+  color: var(--color-dark);
+  font-family: var(--title-font);
+}
+.projects__main-btn {
+  padding: 5px 10px;
+  position: relative;
+  color: var(--color-gray);
+  border-radius: 18px;
+  transition: all 0.2s;
+}
+.projects__main-btn::before {
+  content: "";
+  position: absolute;
+  width: 18px;
+  height: 2px;
+  left: -30px;
+  top: 50%;
+  background-color: rgba(28, 29, 34, 0.1);
+}
+@media (hover: hover) {
+  .projects__main-btn:hover {
+    background-color: var(--color-gray-ligth);
+    color: var(--color-dark);
+  }
+}
+@media (hover: none) {
+  .projects__main-btn:active {
+    background-color: var(--color-gray-ligth);
+    color: var(--color-dark);
+  }
+}
+.projects__acc {
+  overflow: hidden;
+}
+.projects__main-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border-left: 2px solid rgba(28, 29, 34, 0.1);
+  padding-left: 30px;
+  padding-block: 10px;
+}
+.projects__theme {
+  width: 100%;
+  display: flex;
+  padding: 4px;
+}
+.projects__main-chapter.active::after {
+  content: "";
+  position: absolute;
+  width: 7px;
+  background-color: black;
+  height: 1px;
+  right: 0;
+  rotate: 220deg;
+}
+.projects__main-chapter.active::before {
+  content: "";
+  position: absolute;
+  width: 7px;
+  background-color: black;
+  height: 1px;
+  right: 0px;
+  top: 5px;
+  rotate: -220deg;
+}
+
+.projects__main-btn.active {
+  background-color: var(--color-gray-ligth);
+  color: var(--color-dark);
+}
+
+.ant-space,
+.ant-switch {
+  width: 100%;
+  height: 30px;
+}
+
+@keyframes slideIn {
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
+    visibility: hidden;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+    visibility: visible;
+  }
+}
+@keyframes slideOut {
+  from {
+    transform: translateX(0);
+    opacity: 1;
+    visibility: visible;
+  }
+  to {
+    transform: translateX(-100%);
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+.projects__acc {
+  display: none;
+}
+
+.projects__acc.active {
+  display: block;
+  animation: slideIn 0.5s;
+}
+
+.projects__acc.deactive {
+  display: block;
+  animation: slideOut 0.3s;
+}
+
+.hidden {
+  display: none !important;
 }/*# sourceMappingURL=main.css.map */
