--- a/todo/styles/main.scss
+++ b/todo/styles/main.scss
@@ -1,4 +1,4 @@
 @import "./base/reset", "./base/fonts", "./base/mixins", "./base/base",
   "./base/root";
 
-@import "./components/sider";
+@import "./components/sider", "./components/projects";
