--- a/todo/styles/base/_root.scss
+++ b/todo/styles/base/_root.scss
@@ -7,6 +7,7 @@
   --color-green: #78d700;
   --color-gray-alt: #888da7;
   --color-gray-ligth: rgb(136, 141, 167, 0.1);
+  --color-gray-any: rgba(255, 255, 255, 0.5);
 
   --main-font: "ExoTooSemiMed", sans-serif;
   --title-font: "ExoTooBold", sans-serif;
