--- a/todo/styles/components/_baseS.scss
+++ b/todo/styles/components/_baseS.scss
@@ -1,6 +1,9 @@
 .base {
   width: 100%;
   padding: 32px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
   &__top {
     display: flex;
     flex-direction: column;
@@ -22,24 +25,47 @@
     gap: 22px;
     &__date {
       display: flex;
+      gap: 11px;
     }
   }
 
   &__view {
     display: flex;
     border-bottom: 1px solid rgba(28, 29, 34, 0.08);
+    margin-bottom: 20px;
   }
 
   &__view-board,
   &__view-add {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
     padding-inline: 14px;
     padding-bottom: 19px;
+
     @include hover {
-      border-bottom: 1px solid var(--color-dark);
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: -1px;
+        width: 100%;
+        transition: all 2s;
+        background: var(--color-dark);
+        height: 1px;
+      }
+    }
+    &.base__selected {
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: -1px;
+        width: 100%;
+        transition: all 2s;
+        background: var(--color-dark);
+        height: 1px;
+      }
     }
     img {
       width: 18px;
@@ -62,9 +88,38 @@
   }
 
   &__main {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 100%;
+    gap: 22px;
+    &-tasks {
+      display: flex;
+      flex-direction: column;
+      gap: 14px;
+    }
   }
 
   &__main-new {
+    padding: 22px 16px 16px 16px;
+    border: 2px dashed rgba(28, 29, 34, 0.08);
+    border-radius: 12px;
+    width: 100%;
+    &__top {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-bottom: 16px;
+      p {
+        font-family: var(--any-font);
+        display: flex;
+        align-items: center;
+        gap: 3px;
+      }
+    }
+    &__text {
+      color: var(--color-dark);
+    }
   }
 
   &__main-todo {
@@ -78,6 +133,9 @@
 }
 .add {
   &__task {
+    display: flex;
+    gap: 6px;
+    align-items: center;
   }
 }
 .button {
@@ -85,6 +143,16 @@
   }
 
   &__add {
+    font-size: 17px;
+    font-weight: 700;
+    color: var(--color-gray);
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(28, 29, 34, 0.08);
   }
 
   &__add-progress {
