--- a/todo/styles/components/_baseS.scss
+++ b/todo/styles/components/_baseS.scss
@@ -161,3 +161,88 @@
   &__add-done {
   }
 }
+//add
+
+.base {
+  &__add {
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+    &-btn {
+      padding: 8px 8px;
+      background-color: rgba(120, 215, 0, 0.5);
+      border-radius: 17px;
+
+      transition: all 0.2s;
+      @include hover {
+        background-color: rgba(120, 215, 0, 0.9);
+        transform: translateY(-2px);
+      }
+    }
+  }
+
+  &__add-new {
+    width: 50%;
+  }
+
+  &__add-title {
+    color: var(--color-dark);
+
+    &__input {
+      width: 200px;
+
+      border: 2px solid rgba(28, 29, 34, 0.06);
+      border-radius: 8px;
+    }
+  }
+
+  textarea {
+    max-height: 133px !important;
+    padding: 5px;
+    max-width: 200px;
+    min-width: 200px;
+    min-height: 36px;
+    height: 36px;
+  }
+  h3 {
+    padding-bottom: 17px;
+  }
+  h4 {
+    padding-bottom: 10px;
+  }
+
+  &__add-header {
+  }
+
+  &__add-text {
+  }
+
+  &__add-line {
+    padding-bottom: 30px;
+  }
+
+  &__add-btn {
+  }
+
+  &__add-progress {
+    max-width: 50%;
+  }
+}
+.field {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 10px;
+}
+.from {
+}
+
+.base__pattern-add {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: start;
+  padding: 20px;
+  border: 2px dashed rgba(28, 29, 34, 0.08);
+  border-radius: 12px;
+  background: rgb(255, 255, 255);
+}
