--- a/todo/styles/components/_task.scss
+++ b/todo/styles/components/_task.scss
@@ -42,20 +42,13 @@
   }
 
   &__progress-line {
-    width: 100%;
+    width: 70%;
     position: relative;
-    background: rgba(28, 29, 34, 0.08);
+    background: var(--color-red);
     border-radius: 8px;
     height: 4px;
+
     &::before {
-      content: "";
-      position: absolute;
-      left: 0;
-      top: 0px;
-      background: var(--color-red);
-      width: 75%;
-      height: 4px;
-      border-radius: 8px;
     }
   }
 
@@ -69,5 +62,30 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+}
+
+.task__progress-line__all {
+  position: absolute;
+  left: 0;
+  top: 0px;
+  background: rgba(28, 29, 34, 0.08);
+  width: 100%;
+  height: 4px;
+  border-radius: 8px;
+}
+.task__line-wrapper {
+  position: relative;
+  max-width: 100%;
+}
+.line {
+  &__red {
+    background: var(--color-red);
+  }
+  &__orange {
+    background: var(--color-orange);
+  }
+  &__green {
+    background: var(--color-green);
   }
 }
