--- a/todo/styles/main.css
+++ b/todo/styles/main.css
@@ -734,6 +734,20 @@ input:checked + .theme__label .dark__btn {
   transition: all 0.2s;
 }
 @media (hover: hover) {
+  .base__add-btn:disabled:hover {
+    cursor: default;
+    transform: none;
+    background-color: rgba(120, 215, 0, 0.5);
+  }
+}
+@media (hover: none) {
+  .base__add-btn:disabled:active {
+    cursor: default;
+    transform: none;
+    background-color: rgba(120, 215, 0, 0.5);
+  }
+}
+@media (hover: hover) {
   .base__add-btn:hover {
     background-color: rgba(120, 215, 0, 0.9);
     transform: translateY(-2px);
