--- a/todo/styles/main.scss
+++ b/todo/styles/main.scss
@@ -1,5 +1,4 @@
 @import "./base/reset", "./base/fonts", "./base/mixins", "./base/base",
   "./base/root";
 
-@import "./components/sider", "./components/projects", "./components/baseS",
-  "./components/task";
+@import "./components/projects", "./components/baseS", "./components/task";
