--- a/todo/styles/components/_baseS.scss
+++ b/todo/styles/components/_baseS.scss
@@ -1,4 +1,5 @@
 .base {
+  transition: all 0.8s;
   width: 100%;
   padding: 32px;
   position: relative;
@@ -31,7 +32,7 @@
 
   &__view {
     display: flex;
-    border-bottom: 1px solid rgba(28, 29, 34, 0.08);
+    border-bottom: 2px solid rgba(28, 29, 34, 0.08);
     margin-bottom: 20px;
   }
 
@@ -53,7 +54,7 @@
         width: 100%;
         transition: all 2s;
         background: var(--color-dark);
-        height: 1px;
+        height: 2px;
       }
     }
     &.base__selected {
@@ -64,7 +65,7 @@
         width: 100%;
         transition: all 2s;
         background: var(--color-dark);
-        height: 1px;
+        height: 2px;
       }
     }
     img {
@@ -138,11 +139,8 @@
   }
 }
 .button {
-  &__add-todo {
-  }
-
   &__add {
-    font-size: 17px;
+    font-size: 19px;
     font-weight: 700;
     color: var(--color-gray);
     width: 20px;
@@ -239,8 +237,6 @@
   flex-direction: column;
   padding-bottom: 10px;
 }
-.from {
-}
 
 .base__pattern-add {
   display: flex;
@@ -274,6 +270,10 @@
     transform: scale(1);
   }
 }
+
+.dis {
+  opacity: 0.7;
+}
 .drop__area {
   width: 100%;
   height: 200px;
@@ -291,3 +291,62 @@
 .opacity__zero {
   opacity: 0;
 }
+@include dark {
+  .base__header-welcome h3 {
+    color: var(--color-light);
+  }
+  .base {
+    background-color: rgb(41, 43, 49);
+  }
+  .base__view-board {
+    color: var(--color-light);
+  }
+  .base__view-board.base__selected::after,
+  .base__view-add.base__selected::after {
+    background: var(--color-light);
+  }
+  .base__view-board,
+  .base__view-add {
+    @include hover {
+      &::after {
+        background: var(--color-light);
+      }
+    }
+  }
+  .base__main-new {
+    background-color: rgb(36, 38, 44);
+  }
+  .base__main-new__top p,
+  .task__info-text,
+  .task__progress-count__text p,
+  .task__date-now {
+    color: var(--color-gray-any);
+  }
+  .base h4,
+  .task__progress-count__counter {
+    color: var(--color-light);
+  }
+  .task,
+  .button__add {
+    background-color: rgb(41, 43, 49);
+  }
+  .button__add {
+    color: var(--color-gray-any);
+  }
+}
+
+// @keyframes slideIn {
+//   from {
+//     transform: translateX(-100%);
+//     opacity: 0;
+//     visibility: hidden;
+//   }
+//   to {
+//     transform: translateX(0);
+//     opacity: 1;
+//     visibility: visible;
+//   }
+// }
+// .base {
+//   animation: slideIn 0.5s;
+// }
