--- a/todo/styles/components/_projects.scss
+++ b/todo/styles/components/_projects.scss
@@ -30,9 +30,12 @@
     width: 28px;
     height: 28px;
     border-radius: 50%;
-
     color: var(--color-gray);
     font-size: 19px;
+    &:disabled {
+      cursor: default;
+      opacity: 0.5;
+    }
   }
 
   &__main {
@@ -241,6 +244,7 @@
     left: 40px;
     fill: #000;
     transition: 0.3s;
+    color: #000;
   }
   .dark__btn {
     right: -25px;
@@ -306,5 +310,19 @@ input:checked + .theme__label .dark__btn {
   }
   input:checked + .theme__label::after {
     background-color: rgba(255, 255, 255, 0.06);
+  }
+  .ligth__btn {
+    color: gray;
+  }
+  .dark__btn {
+    color: var(--color-light);
+  }
+}
+.no__el {
+  opacity: 0.7;
+  @include hover {
+    background-color: unset;
+    cursor: default;
+    color: unset;
   }
 }
