--- a/todo/styles/components/_baseS.scss
+++ b/todo/styles/components/_baseS.scss
@@ -5,8 +5,12 @@
   position: relative;
   display: flex;
   flex-direction: column;
+
   @include desktop {
     padding: 25px 17px 22px 17px;
+  }
+  @include mobile-s {
+    padding: 15px 10px 22px 10px;
   }
   &__top {
     display: flex;
@@ -17,6 +21,19 @@
     display: flex;
     justify-content: space-between;
     padding-bottom: 43px;
+    padding-top: 10px;
+    @include desktop {
+      padding-top: 0px;
+    }
+    @include tablet {
+      padding-bottom: 40px;
+    }
+    @include mobile {
+      padding-bottom: 35px;
+    }
+    @include mobile-s {
+      padding-bottom: 25px;
+    }
   }
 
   &__header-welcome {
@@ -95,10 +112,19 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 100%;
+    height: 82%;
     gap: 22px;
     @include desktop {
       gap: 15px;
+    }
+    @include mobile-touch {
+      @include mobile {
+        height: 83%;
+      }
+    }
+    @include mobile-s {
+      height: 83%;
+      gap: 10px;
     }
     &-tasks {
       max-height: 70vh;
@@ -108,6 +134,12 @@
       border-radius: 12px;
       &::-webkit-scrollbar {
         display: none;
+      }
+      @include mobile-touch {
+        max-height: 66vh;
+        @include mobile {
+          max-height: 69vh;
+        }
       }
     }
   }
@@ -119,6 +151,9 @@
     width: 100%;
     @include desktop {
       padding: 15px 12px 12px 12px;
+    }
+    @include mobile-s {
+      padding: 15px 7px 12px 7px;
     }
     &__top {
       display: flex;
@@ -190,6 +225,9 @@
     @include desktop {
       gap: 25px;
     }
+    @include mobile-s {
+      gap: 15px;
+    }
     &-btn {
       padding: 8px 8px;
       background-color: rgba(120, 215, 0, 0.5);
@@ -233,12 +271,10 @@
     min-width: 200px;
     min-height: 36px;
     height: 36px;
-  }
-  h3 {
-    padding-bottom: 17px;
-  }
-  h4 {
-    padding-bottom: 10px;
+    @include mobile {
+      min-height: 30px;
+      height: 33px;
+    }
   }
 
   &__add-header {
@@ -249,6 +285,13 @@
 
   &__add-line {
     padding-bottom: 30px;
+    h4 {
+      padding-bottom: 7px;
+    }
+    @include mobile {
+      font-size: 12px;
+      padding-bottom: 15px;
+    }
   }
 
   &__add-btn {
@@ -273,6 +316,9 @@
   border: 2px dashed rgba(28, 29, 34, 0.08);
   border-radius: 12px;
   background: rgb(255, 255, 255);
+  @include mobile {
+    padding: 15px;
+  }
 }
 
 .animated__edit {
@@ -420,5 +466,14 @@
     cursor: pointer;
     color: var(--color-dark);
     display: block;
+  }
+}
+.base__header-welcome {
+  display: flex;
+  align-items: center;
+}
+.todos__number-input {
+  @include mobile {
+    max-width: 70px;
   }
 }
