--- a/todo/styles/main.css
+++ b/todo/styles/main.css
@@ -268,6 +268,18 @@ p {
   --main-size: 16px;
   --info-size: 14px;
 }
+@media (max-width: 859px) {
+  :root {
+    --main-size: 14px;
+    --info-size: 12px;
+  }
+}
+@media (max-width: 640px) {
+  :root {
+    --main-size: 12px;
+    --info-size: 10px;
+  }
+}
 
 .projects {
   width: 325px;
@@ -294,6 +306,12 @@ p {
     background: #fff;
   }
 }
+@media (max-width: 859px) {
+  .projects {
+    width: 215px;
+    padding: 19px 15px 21px 15px;
+  }
+}
 .projects__top {
   display: flex;
   justify-content: space-between;
@@ -303,6 +321,11 @@ p {
 .projects__top h1 {
   font-size: 30px;
   color: var(--color-dark);
+}
+@media (max-width: 859px) {
+  .projects__top h1 {
+    font-size: 28px;
+  }
 }
 .projects__top-btn {
   position: relative;
@@ -342,6 +365,16 @@ p {
   height: 1px;
   right: 0;
   rotate: -45deg;
+}
+@media (max-width: 859px) {
+  .projects__main-chapter::after {
+    bottom: 7px;
+  }
+}
+@media (max-width: 640px) {
+  .projects__main-chapter::after {
+    bottom: 5px;
+  }
 }
 .projects__main-chapter::before {
   content: "";
@@ -401,6 +434,12 @@ p {
   display: flex;
   padding: 4px;
 }
+@media (max-width: 859px) {
+  .projects__theme {
+    padding: 6px;
+  }
+}
+
 .projects__main-chapter.active::after {
   content: "";
   position: absolute;
@@ -458,6 +497,14 @@ p {
     display: none;
   }
 }
+@keyframes opacityProjects {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .projects__acc {
   display: none;
 }
@@ -501,6 +548,12 @@ p {
     left: 9px;
   }
 }
+@media (max-width: 859px) {
+  .theme__label:after {
+    width: 81px;
+    left: 6px;
+  }
+}
 .theme__label span {
   position: absolute;
   width: 120px;
@@ -521,6 +574,11 @@ p {
     left: 19px;
   }
 }
+@media (max-width: 859px) {
+  .theme__label .ligth__btn {
+    left: 13px;
+  }
+}
 .theme__label .dark__btn {
   right: -25px;
   fill: #fff;
@@ -529,6 +587,11 @@ p {
 @media (max-width: 1239px) {
   .theme__label .dark__btn {
     right: -39px;
+  }
+}
+@media (max-width: 859px) {
+  .theme__label .dark__btn {
+    right: -50px;
   }
 }
 
@@ -552,6 +615,11 @@ input:checked + .theme__label::after {
     left: 186px;
   }
 }
+@media (max-width: 859px) {
+  input:checked + .theme__label::after {
+    left: 160px;
+  }
+}
 
 .theme__label:active::after {
   width: 140px;
@@ -559,6 +627,11 @@ input:checked + .theme__label::after {
 @media (max-width: 1023px) {
   .theme__label:active::after {
     width: 100px;
+  }
+}
+@media (max-width: 859px) {
+  .theme__label:active::after {
+    width: 86px;
   }
 }
 
@@ -584,6 +657,11 @@ input:checked + .theme__label .dark__btn {
 }
 .wrapper.dark .projects__main-list {
   border-left: 2px solid var(--color-gray-any);
+}
+@media (max-width: 859px) {
+  .wrapper.dark .projects__main-list {
+    font-size: 12px;
+  }
 }
 .wrapper.dark .projects__main-btn::before {
   background-color: var(--color-gray-any);
@@ -633,8 +711,23 @@ input:checked + .theme__label .dark__btn {
   }
 }
 
+@keyframes projClose {
+  from {
+    opacity: 1;
+    display: block;
+  }
+  to {
+    opacity: 0;
+    display: none;
+  }
+}
 .projects__mobile-open {
   display: flex;
+  animation: opacityProjects 0.5s;
+}
+
+.projects.projects__mobile-close {
+  animation: projClose 0.5s;
 }
 
 .base {
@@ -650,6 +743,11 @@ input:checked + .theme__label .dark__btn {
     padding: 25px 17px 22px 17px;
   }
 }
+@media (max-width: 640px) {
+  .base {
+    padding: 15px 10px 22px 10px;
+  }
+}
 .base__top {
   display: flex;
   flex-direction: column;
@@ -658,6 +756,27 @@ input:checked + .theme__label .dark__btn {
   display: flex;
   justify-content: space-between;
   padding-bottom: 43px;
+  padding-top: 10px;
+}
+@media (max-width: 1239px) {
+  .base__header {
+    padding-top: 0px;
+  }
+}
+@media (max-width: 1023px) {
+  .base__header {
+    padding-bottom: 40px;
+  }
+}
+@media (max-width: 859px) {
+  .base__header {
+    padding-bottom: 35px;
+  }
+}
+@media (max-width: 640px) {
+  .base__header {
+    padding-bottom: 25px;
+  }
 }
 .base__header-icons {
   display: flex;
@@ -733,12 +852,23 @@ input:checked + .theme__label .dark__btn {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 100%;
+  height: 82%;
   gap: 22px;
 }
 @media (max-width: 1239px) {
   .base__main {
     gap: 15px;
+  }
+}
+@media (pointer: none) and (max-width: 859px), (pointer: coarse) and (max-width: 859px) {
+  .base__main {
+    height: 83%;
+  }
+}
+@media (max-width: 640px) {
+  .base__main {
+    height: 83%;
+    gap: 10px;
   }
 }
 .base__main-tasks {
@@ -751,6 +881,16 @@ input:checked + .theme__label .dark__btn {
 .base__main-tasks::-webkit-scrollbar {
   display: none;
 }
+@media (pointer: none), (pointer: coarse) {
+  .base__main-tasks {
+    max-height: 66vh;
+  }
+}
+@media (pointer: none) and (max-width: 859px), (pointer: coarse) and (max-width: 859px) {
+  .base__main-tasks {
+    max-height: 69vh;
+  }
+}
 .base__main-new {
   padding: 22px 16px 16px 16px;
   border: 2px dashed rgba(28, 29, 34, 0.08);
@@ -760,6 +900,11 @@ input:checked + .theme__label .dark__btn {
 @media (max-width: 1239px) {
   .base__main-new {
     padding: 15px 12px 12px 12px;
+  }
+}
+@media (max-width: 640px) {
+  .base__main-new {
+    padding: 15px 7px 12px 7px;
   }
 }
 .base__main-new__top {
@@ -816,6 +961,11 @@ input:checked + .theme__label .dark__btn {
     gap: 25px;
   }
 }
+@media (max-width: 640px) {
+  .base__add {
+    gap: 15px;
+  }
+}
 .base__add-btn {
   padding: 8px 8px;
   background-color: rgba(120, 215, 0, 0.5);
@@ -868,14 +1018,23 @@ input:checked + .theme__label .dark__btn {
   min-height: 36px;
   height: 36px;
 }
-.base h3 {
-  padding-bottom: 17px;
-}
-.base h4 {
-  padding-bottom: 10px;
+@media (max-width: 859px) {
+  .base textarea {
+    min-height: 30px;
+    height: 33px;
+  }
 }
 .base__add-line {
   padding-bottom: 30px;
+}
+.base__add-line h4 {
+  padding-bottom: 7px;
+}
+@media (max-width: 859px) {
+  .base__add-line {
+    font-size: 12px;
+    padding-bottom: 15px;
+  }
 }
 .base__add-progress {
   width: 50%;
@@ -896,6 +1055,11 @@ input:checked + .theme__label .dark__btn {
   border: 2px dashed rgba(28, 29, 34, 0.08);
   border-radius: 12px;
   background: rgb(255, 255, 255);
+}
+@media (max-width: 859px) {
+  .base__pattern-add {
+    padding: 15px;
+  }
 }
 
 .animated__edit {
@@ -1067,6 +1231,17 @@ input:checked + .theme__label .dark__btn {
   }
 }
 
+.base__header-welcome {
+  display: flex;
+  align-items: center;
+}
+
+@media (max-width: 859px) {
+  .todos__number-input {
+    max-width: 70px;
+  }
+}
+
 .task {
   width: 100%;
   padding: 20px;
@@ -1080,14 +1255,30 @@ input:checked + .theme__label .dark__btn {
     padding: 12px;
   }
 }
+@media (max-width: 640px) {
+  .task {
+    padding: 7px;
+  }
+}
 .task__info {
   padding-bottom: 22px;
+}
+@media (max-width: 859px) {
+  .task__info {
+    padding-bottom: 15px;
+  }
 }
 .task__info-top {
   display: flex;
   align-items: center;
   justify-content: space-between;
   color: var(--color-dark);
+  padding-bottom: 10px;
+}
+@media (max-width: 859px) {
+  .task__info-top {
+    padding-bottom: 1px;
+  }
 }
 .task__info-text {
   line-height: 1;
@@ -1111,6 +1302,11 @@ input:checked + .theme__label .dark__btn {
   font-size: 14px;
   color: var(--color-dark);
 }
+@media (max-width: 859px) {
+  .task__progress-count__counter {
+    font-size: 12px;
+  }
+}
 .task__progress-line {
   width: 70%;
   position: relative;
@@ -1129,6 +1325,16 @@ input:checked + .theme__label .dark__btn {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media (max-width: 859px) {
+  .task__date-now {
+    padding: 14px 13px;
+    font-size: 12px;
+  }
+}
+
+.opacity__info {
+  opacity: 0;
 }
 
 .task__progress-line__all {
@@ -1156,13 +1362,19 @@ input:checked + .theme__label .dark__btn {
   background: var(--color-green);
 }
 
+@media (max-width: 640px) {
+  .task__info-top__btn img {
+    max-width: 22px;
+  }
+}
+
 .task {
   position: relative;
 }
 .task__modal {
   position: absolute;
   right: 0px;
-  background-color: var(--color-gray);
+  background-color: #fffafa;
   display: flex;
   gap: 4px;
   flex-direction: column;
@@ -1206,4 +1418,7 @@ input:checked + .theme__label .dark__btn {
 
 .wrapper.dark .task__progress-line__all {
   background: rgba(28, 29, 34, 0.2);
+}
+.wrapper.dark .task__modal {
+  background-color: #232323;
 }/*# sourceMappingURL=main.css.map */
